# lxgui-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
logs/: README.md
src/: main.cpp
